--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -100,12 +100,12 @@
                 ‘best’ local players together in a super team and ‘win’ things, that’s about it.</p>
               <p>Let’s break down the Academy interpretations of Player development and how it SHOULD express itself:</p>
               <ol>
-                <li><b>Experimentation</b> during the game different moments introduce new challenges and allows a player to
+                <li><b>Experimentation:</b> during the game different moments introduce new challenges, which allows a player to
                   test new ideas.</li>
                 <li>Through <b>trial and error</b>, a player can discover what works and what doesn’t work.</li>
                 <li>This discovery fuels <b>improvement</b> – refining the process, idea, or player.</li>
                 <li>These improvements are the building blocks of personal <b>development</b>.</li>
-                <li>This <b>process repeats</b>: as a player develops it opens the door to step (1) continued experimentation.</li>
+                <li>This <b>process repeats</b>: as a player develops it opens the door to step (1) i.e. continued experimentation.</li>
               </ol>
               <blockquote>
                 <b>The essence of player development is player mistakes.</b> Without mistakes the iterative cycle of trial and
@@ -115,11 +115,10 @@
               <p>Summary: Develop: grow or enhance &rarr; Growth requires improvement &rarr; Improvement often comes from
                 experimentation &rarr; experimentation involves trial and error &rarr; trial and error leads to insights &rarr;
                 Insights lead to further development.</p>
-              <p>Figure 1: The lifecycle of a youth player’s development. To develop one must risk experimentation of the ball
-                during a game and glean insight into their mistakes to improve. See text for detail.</p>
+              <blockquote>
               <p>For this reason, our Academy is very conscious of building a playing environment that incentives the player to
-                take risks on the ball during the game and test themselves without losing confidence or garnering a resentment
-                to such a task.</p>
+                take risks on the ball during a game and test their ideas without losing confidence in the face of mistakes or opting for the short term perceieved saftey of 'booting it.'</p>
+                </blockquote>
               <p>How do we do that?</p>
             </div>
           </div>
