--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -158,8 +158,10 @@
                 more than enough players attending our Academy to take pride in this environment. The number of parents that
                 have approached us to-date with the statement: “my child plays their best football all week at these Academy games”
                 further lends support to our coaching model.</p>
+              <blockquote>
               <p>Remember: We argue the essence of any ‘development’ model is in-game playing mistakes. Therefore, the playing
                 environment must be one that promotes the excessive occurrence of them!</p>
+              </blockquote>
               <p>Now, what does an Academy session look like?</p>
             </div>
           </div>
@@ -178,6 +180,7 @@
           <div id="collapseSessionDesign" class="collapse" role="tabpanel" aria-labelledby="headingSessionDesign"
             data-parent="#academyAccordion">
             <div class="card-body">
+              <blockquote>
               <p>Without listing the numerous references, you can find online, there appears to be two primary schools of
                 thought on the approach to grassroots youth development in football.</p>
               <ol>
@@ -187,6 +190,7 @@
                   the player acts on the ball. Therefore, developing the players decision-making skills ultimately improves
                   the player and subsequently the team.</li>
               </ol>
+                </blockquote>
               <p>In our experience the two different approaches necessitate two unique session designs.</p>
               <p>If you are seeking out the short of our philosophy: we focus on both approaches until a discretionary point,
                 at which time, we switch solely to approach 2 i.e. decision-making.</p>
