--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -120,6 +120,11 @@
                 take risks on the ball during a game and test their ideas without losing confidence in the face of mistakes or opting for the short term perceieved saftey of 'booting it.'</p>
                 </blockquote>
               <p>How do we do that?</p>
+              <div class="text-center my-4">
+                <img src="img/Develop_cycle.png" alt="Player development cycle" class="img-fluid" style="max-width: 100%; height: auto;">
+                <small class="d-block mt-2 text-muted">Figure 1: A youth player’s development cycle. 
+                  To develop a player they must risk in-game experimentation on the ball to experience mistakes. See text for detail. </small>
+              </div>
             </div>
           </div>
         </div>
