--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -96,13 +96,13 @@
           <div id="collapsePlayerDev" class="collapse show" role="tabpanel" aria-labelledby="headingPlayerDev"
             data-parent="#academyAccordion">
             <div class="card-body">
-              <p>This word gets deployed in the grassroots space... a lot. Typically, it’s an excuse to get all the
+              <p>This term <em>Player Development</em>, gets deployed across the grassroots of this game... a lot. Typically, it’s an excuse to get all the
                 ‘best’ local players together in a super team and ‘win’ things, that’s about it.</p>
-              <p>Let’s break down the Academy interpretations of Player development and how it SHOULD express itself:</p>
+              <p>Let’s break down how this Academy interprets and defines Player development, and how we believe it SHOULD express itself:</p>
               <ol>
-                <li><b>Experimentation:</b> during the game different moments introduce new challenges, which allows a player to
+                <li><b>Experimentation:</b> during the chaos of the game different moments introduce new challenges, which allows a player to
                   test new ideas.</li>
-                <li>Through <b>trial and error</b>, a player can discover what works and what doesn’t work.</li>
+                <li>Through <b>trial and error</b>, a player can discover what ideas work and don't.</li>
                 <li>This discovery fuels <b>improvement</b> – refining the process, idea, or player.</li>
                 <li>These improvements are the building blocks of personal <b>development</b>.</li>
                 <li>This <b>process repeats</b>: as a player develops it opens the door to step (1) i.e. continued experimentation.</li>
@@ -116,8 +116,8 @@
                 experimentation &rarr; experimentation involves trial and error &rarr; trial and error leads to insights &rarr;
                 Insights lead to further development.</p>
               <blockquote>
-              <p>For this reason, our Academy is very conscious of building a playing environment that incentives the player to
-                take risks on the ball during a game and test their ideas without losing confidence in the face of mistakes or opting for the short term perceieved saftey of 'booting it.'</p>
+              <p>Our Academy is focused on a playing environment that incentives in-game player risks on the ball,
+                 subsequently, testing their ideas without losing confidence in the face of mistakes or opting for the short term perceieved saftey of 'booting it.'</p>
                 </blockquote>
               <p>How do we do that?</p>
               <div class="text-center my-4">
@@ -142,11 +142,11 @@
           <div id="collapseEnvironment" class="collapse" role="tabpanel" aria-labelledby="headingEnvironment"
             data-parent="#academyAccordion">
             <div class="card-body">
-              <p>Based on our understanding of player development defined above we want to recreate a ‘risk-free’ player-focused
+              <p>Using the above as our philosophical foundation, we want to create a ‘risk-free’ player-focused
                 environment when it comes to playing. Below are the following boundaries we put in place that best aids in such
                 an environment:</p>
               <ol>
-                <li>Immediately recover from perceived ‘mistakes.’ The essence of the Academy.</li>
+                <li>Immediately recover from perceived ‘mistakes.’ Body language, verbal cues, concentration levels. The essence of the Academy.</li>
                 <li>No winning or losing. No leagues, no ladders, no accolades, no ranks.</li>
                 <li>No teams. Players rotate all the time.</li>
                 <li>No clearances whatsoever. If a player boots the ball for any reason, especially strategic = penalty against
@@ -156,7 +156,7 @@
                 <li>No running back to the goal to ‘pretend’ to goal keep. Very common amongst little kids to run back towards
                   their goal when out of possession. No. No. No.</li>
                 <li>Maximum coaching recognition, praise and celebration for trial-and-error efforts on the ball and throughout
-                  the game.</li>
+                  the game. Hyped cheering from coaches when required!</li>
                 <li>100% effort, all the time. Unless sick or injured.</li>
               </ol>
               <p>We have observed a marked difference in the confidence, genuine enjoyment and appreciation of playing from
