--- a/navbar.html
+++ b/navbar.html
@@ -30,7 +30,7 @@
           </a>
         </li>
         <li class="nav-item" style="margin: 0 15px;">
-          <a class="nav-link" href="AcademyPhenomena.html" 
+          <a class="nav-link" href="Academy.html" 
              style="color: white;" 
              onmouseover="this.style.color='#FFD700';" 
              onmouseout="this.style.color='white';">
