--- a/academy.html
+++ b/academy.html
@@ -120,10 +120,11 @@
               <p>Players play a game. Win or lose. A game is often enjoyed by spectators. Spectators want to enjoy top games. Players want to play in top games. They need to improve. Players rely on coaches, who offer much needed guidance in the pursuit of improvement, whilst, finally, clubs seek to facilitate this three-way transaction.</p>
               <p>Clubs offer a ‘home’ for the game, a ‘house’ for the fans, and safe, accessible infrastructure for the coaches. We believe this lifecycle can be visualised at your local association club right through to an elite level football club like Manchester United.</p>
 
-              <!-- Figure 1 placeholder -->
-              <!-- <div class="text-center my-4">
-                <img src="img/figure1.jpg" alt="Fig 1: Football lifecycle diagram" class="img-fluid" style="max-width: 100%; height: auto;">
-                <small class="d-block mt-2 text-muted">Figure 1: Football lifecycle</small>
+              <!-- Figure 1  -->
+              <<div class="text-center my-4">
+                <img src="img/Football_Cycle.png" alt="Fig 1: Football lifecycle diagram" class="img-fluid" style="max-width: 100%; height: auto;">
+                <small class="d-block mt-2 text-muted">Figure. 1: Our simplification of Football’s organic exchange cycle. People always want to watch a game (fans). Players comprise that game. 
+                  Coaches facilitate the development of players, and clubs facilitate coaches, in search developing better players and attracting bigger crowds. </small>
               </div> -->
 
             </div>
@@ -149,10 +150,13 @@
               <p>Clubs cannot escape this paradigm; they need highly capable players to win them prestigious games. This is obvious. Often lost within realisation is the implicit role of the coach. Coaches are at the centre, the focal point of player development. There is no debating this. From grassroots to foundation football through U’19’s and beyond. Without coaches, players may grow to be raw talented, capable players, but will almost certainly lack the wisdom required to execute such talent under the pressure of expecting paying fans. Coaches are a necessity at youth level. One could argue THE necessity.</p>
               <p>Considering this, clubs should invest in well-paid professional coaches. This frees up the most important commodity: their time. With the asset of time now in abundance, coaches can properly invest their focus in the ~10,000-hour development model required to produce a child into a potential professional player with marketable skills, attractive to the spectator. The clubs then bid over these emerging players to play for their teams in the hope they will fill the ‘houses’ with external investment, coming from the fans (as illustrated in Fig. 2). Before any other economics are considered within the business paradigm of football one cannot escape the obvious. It is a talent-driven meritocratic sport. Therefore, the better the player. The better the team, the better the league. The BIGGER the trophy.</p>
 
-              <!-- Figure 2 placeholder -->
-              <!-- <div class="text-center my-4">
-                <img src="img/figure2.jpg" alt="Fig 2: Football business lifecycle diagram" class="img-fluid" style="max-width: 100%; height: auto;">
-                <small class="d-block mt-2 text-muted">Figure 2: Football business lifecycle</small>
+              <!-- Figure 2  -->
+              <<div class="text-center my-4">
+                <img src="img/Football_Business_Cycle.png" alt="Fig 2: Football business lifecycle diagram" class="img-fluid" style="max-width: 100%; height: auto;">
+                <small class="d-block mt-2 text-muted">Fig. 2: Our simplified model of football’s global modern-day business cycle. Clubs invest in infrastructure, 
+                  facilities, and most importantly manpower (coaches) to satisfy the players 10,000-hour time requirement for specialization in football. 
+                  These players emerge as young adults with highly desirable skill sets, marketed to the masses in the form of competitive games. 
+                  Fans will pay clubs good money to watch these games and admire the competition between skill sets, where the clubs recoup their investments.</small>
               </div> -->
 
             </div>
@@ -175,10 +179,12 @@
               <p>Considering the raft of red tape and disincentives for clubs, they choose not to act seriously about their youth set ups. Relegating the responsibility of coaching young players to volunteers, often parents. This results in an underinvestment in youth development models, and a subsequently malnourished landscape for the players to participate within. This effect is not obvious at first, often only becoming clearer the closer the child approaches adulthood. One’s potential has not been reached.</p>
               <p>This ultimately creates a ‘gap’ in the marketplace. Which marketplace? Australian player development. A demand for perceived proper player development and a paucity of its supply amongst established clubs that cannot risk the financial investment required to satisfy this demand. Good ol’ market forces!</p>
 
-              <!-- Figure 3 placeholder -->
-              <!-- <div class="text-center my-4">
-                <img src="img/figure3.jpg" alt="Fig 3: Australian football context diagram" class="img-fluid" style="max-width: 100%; height: auto;">
-                <small class="d-block mt-2 text-muted">Figure 3: Australian football context</small>
+              <!-- Figure 3 -->
+              <div class="text-center my-4">
+                <img src="img/Australian_Football_Cycle.png" alt="Fig 3: Australian football context diagram" class="img-fluid" style="max-width: 100%; height: auto;">
+                <small class="d-block mt-2 text-muted">Figure. 3: A simplified interpretation of Australia’s modern-day footballing cycle. 
+                  Clubs are hampered by red tape and regulation, ultimately disincentivising any investment in the European-equivalent long-term development of youth players. 
+                  Subsequently, players emerge as young adults’ uncompetitive on a global landscape. Locally, marketability suffers, and fan investment walks away.</small>
               </div> -->
 
             </div>
@@ -201,10 +207,14 @@
               <p>Coaches. That’s it. No fancy stadiums, or gyms, or facilities. Heck! Probably not even a football field itself. A ‘parcel’ of grass will do it. The most important commodity in the development space of football is proper well-paid, professional coaching.</p>
               <p>To conclude, this explanation is not an attempt to lay blame at anyone’s feet or critique the current landscape or culture. Rather, it’s to observe and record this interesting Academy Phenomena. Based on current incentive structures within the Australian landscape, our estimate is for the Academy industry to continue its growth, aggressively, motivated by the ever-increasing demand of parents wanting to secure their child’s playing future. Our hypothesis is this leads Academies to ‘replacing’ original foundational clubs in local areas as they evolve into large, cost affordable institutions, themselves.</p>
 
-              <!-- Figure 4 placeholder -->
-              <!-- <div class="text-center my-4">
-                <img src="img/figure4.jpg" alt="Fig 4: Academy phenomena diagram" class="img-fluid" style="max-width: 100%; height: auto;">
-                <small class="d-block mt-2 text-muted">Figure 4: Academy phenomena</small>
+              <!-- Figure 4 -->
+              <div class="text-center my-4">
+                <img src="img/Academy_Football_Cycle.png" alt="Fig 4: Academy phenomena diagram" class="img-fluid" style="max-width: 100%; height: auto;">
+                <small class="d-block mt-2 text-muted"> Figure. 4: Our simplified interpretation on how and why the Academy scene has exploded in recent years across Australia. 
+                  Fed up, affluent parents now constitute the bulk of private investment in youth development. Academies replace clubs and attract a wide variety of players 
+                  because coaches are now paid a very reasonable wage i.e. ~$25 - $50 AUD per hour. These players emerge with a desirable set of skills that satisfy the parents 
+                  expectations of an elite-like footballer and reintegration themselves within the system at a higher level. 
+                  There are several examples of professional players that started or spent a significant amount of time at a private Academy in Australia before reintegration.</small>
               </div> -->
 
             </div>
