--- a/academy.html
+++ b/academy.html
@@ -125,7 +125,7 @@
                 <img src="img/Football_Cycle.png" alt="Fig 1: Football lifecycle diagram" class="img-fluid" style="max-width: 100%; height: auto;">
                 <small class="d-block mt-2 text-muted">Figure. 1: Our simplification of Football’s organic exchange cycle. People always want to watch a game (fans). Players comprise that game. 
                   Coaches facilitate the development of players, and clubs facilitate coaches, in search developing better players and attracting bigger crowds. </small>
-              </div> -->
+              </div>
 
             </div>
           </div>
@@ -157,7 +157,7 @@
                   facilities, and most importantly manpower (coaches) to satisfy the players 10,000-hour time requirement for specialization in football. 
                   These players emerge as young adults with highly desirable skill sets, marketed to the masses in the form of competitive games. 
                   Fans will pay clubs good money to watch these games and admire the competition between skill sets, where the clubs recoup their investments.</small>
-              </div> -->
+              </div>
 
             </div>
           </div>
@@ -185,7 +185,7 @@
                 <small class="d-block mt-2 text-muted">Figure. 3: A simplified interpretation of Australia’s modern-day footballing cycle. 
                   Clubs are hampered by red tape and regulation, ultimately disincentivising any investment in the European-equivalent long-term development of youth players. 
                   Subsequently, players emerge as young adults’ uncompetitive on a global landscape. Locally, marketability suffers, and fan investment walks away.</small>
-              </div> -->
+              </div>
 
             </div>
           </div>
@@ -215,7 +215,7 @@
                   because coaches are now paid a very reasonable wage i.e. ~$25 - $50 AUD per hour. These players emerge with a desirable set of skills that satisfy the parents 
                   expectations of an elite-like footballer and reintegration themselves within the system at a higher level. 
                   There are several examples of professional players that started or spent a significant amount of time at a private Academy in Australia before reintegration.</small>
-              </div> -->
+              </div>
 
             </div>
           </div>
