--- a/academy.html
+++ b/academy.html
@@ -121,7 +121,7 @@
               <p>Clubs offer a ‘home’ for the game, a ‘house’ for the fans, and safe, accessible infrastructure for the coaches. We believe this lifecycle can be visualised at your local association club right through to an elite level football club like Manchester United.</p>
 
               <!-- Figure 1  -->
-              <<div class="text-center my-4">
+              <div class="text-center my-4">
                 <img src="img/Football_Cycle.png" alt="Fig 1: Football lifecycle diagram" class="img-fluid" style="max-width: 100%; height: auto;">
                 <small class="d-block mt-2 text-muted">Figure. 1: Our simplification of Football’s organic exchange cycle. People always want to watch a game (fans). Players comprise that game. 
                   Coaches facilitate the development of players, and clubs facilitate coaches, in search developing better players and attracting bigger crowds. </small>
@@ -151,7 +151,7 @@
               <p>Considering this, clubs should invest in well-paid professional coaches. This frees up the most important commodity: their time. With the asset of time now in abundance, coaches can properly invest their focus in the ~10,000-hour development model required to produce a child into a potential professional player with marketable skills, attractive to the spectator. The clubs then bid over these emerging players to play for their teams in the hope they will fill the ‘houses’ with external investment, coming from the fans (as illustrated in Fig. 2). Before any other economics are considered within the business paradigm of football one cannot escape the obvious. It is a talent-driven meritocratic sport. Therefore, the better the player. The better the team, the better the league. The BIGGER the trophy.</p>
 
               <!-- Figure 2  -->
-              <<div class="text-center my-4">
+              <div class="text-center my-4">
                 <img src="img/Football_Business_Cycle.png" alt="Fig 2: Football business lifecycle diagram" class="img-fluid" style="max-width: 100%; height: auto;">
                 <small class="d-block mt-2 text-muted">Fig. 2: Our simplified model of football’s global modern-day business cycle. Clubs invest in infrastructure, 
                   facilities, and most importantly manpower (coaches) to satisfy the players 10,000-hour time requirement for specialization in football. 
