--- a/help_im_new.html
+++ b/help_im_new.html
@@ -26,23 +26,18 @@
   <!-- Nav Section End -->
 
   <!-- Intro Section -->
-  <section id="intro" class="py-5" style="background-color: #f0f4f8;">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-10">
-          <div class="p-4 p-md-5 rounded shadow-sm bg-white bg-opacity-75 text-center">
-            <h1 class="mb-3">Help! I’m New.</h1>
-            <p class="lead">
-              If you’re a parent or guardian located in the Hawkesbury area (or nearby!), searching out coaching for your child in football you’ve come to the right place.
-            </p>
-            <p class="lead">
-              Whether you’re new to the game or you played yourself this page is designed to help.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+<section id="intro" class="text-center py-5" style="background-color: #f0f4f8;">
+  <div class="container section-card" style="background: rgba(255, 255, 255, 0.85); padding: 2rem 3rem; border-radius: 12px; max-width: 700px; margin: 0 auto;">
+    <h1>Help! I’m new.</h1>
+    <p>
+      If you’re a parent or guardian located in the Hawkesbury area (or nearby!), searching out coaching for your child in football you’ve come to the right place.
+    </p>
+    <p>
+      Whether you’re new to the game or you played yourself this page is designed to help.
+    </p>
+  </div>
+</section>
+
 
   <!-- Collapsible Content Section -->
   <section class="py-5 my-5">
