--- a/academy.html
+++ b/academy.html
@@ -84,18 +84,7 @@
       <h1>The Academy Phenomena</h1>
       <p>A bit different, we explore potential reasons as to why there has been an explosion of private coaching businesses emerge across Australia in recent years.</p>
     </div>
-  </section>
-
-  <!-- Table of Contents -->
-  <section id="toc" class="container my-4">
-    <h2>Contents</h2>
-    <ul>
-      <li><a href="#football-lifecycle">Football’s Lifecycle</a></li>
-      <li><a href="#football-business-lifecycle">Football’s Business Lifecycle</a></li>
-      <li><a href="#australian-context">An Australian Context</a></li>
-      <li><a href="#academy-phenomena">The Academy Phenomena</a></li>
-    </ul>
-  </section>
+  </section
 
   <!-- Accordion Content Section -->
   <section class="py-5">
