--- a/help_im_new.html
+++ b/help_im_new.html
@@ -11,6 +11,28 @@
   <link rel="stylesheet" href="css/fontawesome/css/all.css" />
   <title>Foot and Ball Academy</title>
   <style>
+    /* Style collapsible headers consistently */
+.card-header {
+  background-color: #f8f9fa; /* light gray background */
+  padding: 1rem 1.25rem;     /* consistent padding */
+  border-radius: 8px;
+  border: 1px solid #dee2e6;
+  margin-bottom: 0.5rem;
+}
+
+.card-header a {
+  display: block;
+  font-weight: 600;
+  color: #212529;
+  text-decoration: none;
+}
+
+.card-header a:hover,
+.card-header a:focus {
+  text-decoration: none;
+  color: #0d6efd; /* Bootstrap primary blue */
+}
+
     td {
       text-align: center;
       vertical-align: middle;
